# arena-rosnav

./: .gitignore  .repos  .rosinstall  Dockerfile  LICENSE.md  README.md  Singularity.def  arena-rosnav.def  arena.repos  changes.patch  frames.gv  frames_2024-10-28_14.44.24.gv  install.sh  install2.sh  install3_training.sh  install4_arena_unity.sh  launchconverter.py  package.list  pyproject.toml  test2.def
arena_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
arena_bringup/arena_bringup/: __init__.py  actions.py  future.py  substitutions.py
arena_bringup/arena_bringup/extensions/: NodeLogLevelExtension.py
arena_bringup/configs/: pedsim.yaml  task_generator.yaml
arena_bringup/configs/benchmark/: config.yaml
arena_bringup/configs/gazebo/: empty.sdf
arena_bringup/configs/hunav_agents/: default.yaml
arena_bringup/configs/parametrized/: default.xml
arena_bringup/configs/robot_setup/: SCHEMA.yaml  demo.yaml  marl_map_empty.yaml  rosnav_agents.yaml  rosnav_agents_marl.yaml
arena_bringup/configs/scenarios/: _SCHEMA.json  arena_corridor.json  arena_corridor_1.json  arena_corridor_2.json  arena_corridor_3.json  arena_corridor_4.json  arena_corridor_5.json  arena_hawker_centre_1.json  arena_hospital_large_1.json  arena_hospital_small_1.json  arena_hospital_small_2.json  arena_hospital_small_3.json  arena_hospital_small_4.json  arena_hospital_small_5.json  default.json  default_4.json  evacuation.json  generate_actors.ipynb  highly_social.json  map7.json  map_empty_2.json  map_empty_3.json  map_empty_4.json  map_empty_5.json  office_example.json  pyforceplugin_test.json
arena_bringup/configs/training/: dreamer_training_config.yaml  lstm_semantic_training_config.yaml  sb_training_config.yaml  semantic_training_config.yaml  train_from_sh.cfg  training_config.yaml  unity_rgbd_training_config.yaml
arena_bringup/launch/: arena.launch.py  old_start_arena.launch.py  start_arena.launch  start_arena.launch.py  start_arena_flatland.launch  start_generate.launch  start_generate.launch.py  start_training.launch  start_training.launch.py  visualization_training.launch  visualization_training.launch.py
arena_bringup/launch/old/: old_start_arena.launch.py
arena_bringup/launch/testing/: amcl.launch  amcl.launch.py  flatland_simulator.launch  robot.launch  robot.launch.py  robots.launch  sensor_sim.launch  sensor_sim.launch.py  task_generator.launch  task_generator.launch.py  task_generator.yaml
arena_bringup/launch/training/: arena2d_simulator.launch  flatland_simulator.launch  flatland_simulator.launch.py  single_env_training.launch  single_env_training.launch.py  start_envs.launch  start_envs.launch.py  train_agent.launch  train_agent.launch.py  train_robot.launch  train_robot.launch.py
arena_bringup/launch/utils/: entity_manager.launch  entity_manager.launch.py  fake_localization.launch  fake_localization.launch.py  hunavsim.launch.py  intermediate_planner.launch  intermediate_planner.launch.py  map_server.launch  map_server.launch.py  plan_manager.launch  plan_manager.launch.py  rviz.launch  rviz.launch.py  timed_space_planner_fsm.launch  timed_space_planner_fsm.launch.py
arena_bringup/params/: drl.yaml  flatland.yaml  flatland_deploy.yaml  map_generator.yaml  rosconsole.conf
arena_bringup/params/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
arena_bringup/params/mbf/: applr_local_planner_params.yaml  dwa_local_planner_params.yaml  hateb_local_planner_params.yaml  move_base_params.yaml  mpc_local_planner_params.yaml  teb_local_planner_params.yaml  trail_local_planner_params.yaml
arena_bringup/rviz/: empty.rviz  nav copy.rviz  nav.rviz
arena_bringup/scripts/: pull  repos
hunav_gz_plugin/: CMakeLists.txt  package.xml
hunav_gz_plugin/src/: HuNavActorPlugin.cpp  HuNavSystemPlugin.cpp
setup/install2/: install2.sh  package.list  pyproject.toml
task_generator/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
task_generator/cfg/: TaskGenerator.cfg
task_generator/cfg/install/: local_setup.sh  setup.bash  (+3 more)
task_generator/launch/: task_generator.launch  task_generator.launch.py
task_generator/robot_setup/: SCHEMA.yaml  marl_map_empty.yaml  rosnav_agents.yaml
task_generator/scenarios/: SCHEMA.json  _SCHEMA.json  eval_indoor_obs05.json  floor_obs20.json  marl_ignc_obs0.json  marl_map_empty_obs0.json  new_scenario_1.json  new_scenario_2.json  new_scenario_3.json  random_scenario.xml  scenario.json  scenario_2.json  scenario_3.json  scenario_delete_dynamic.json  scenario_maptest.json  test1.json  test_scenario.json  wall_test_scenario.json  working_scenario.json
task_generator/scripts/: delay_restart.py  filewatcher.py  main.py  scenario_helper.py  server.py  task_generator_node.py  utils.py
task_generator/task_generator/: CMakeLists.txt  __init__.py  constants.py  filewatcher.py  node.py  obstacles_manager.py  package.xml  server.py  shared.py  task_generator_node.py  tasks.py  utils.py
task_generator/task_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
testing/scripts/: drl_agent_node.py
testing/testing/: __init__.py
training/: .CMakeLists.txt  .gitignore  .setup.py  CMakeLists.txt  package.xml
training/configs/: training_config.yaml
training/docker/: dockerfile  entrypoint.sh
training/scripts/: run_agent.py  train_agent.py  train_agent.sh  train_agent.zsh  train_log.txt  train_log_2.txt  train_switch_agent.py
training/srv/: String.srv
training/tools/: argsparser.py  config.py  constants.py  dynamic_parameter.py  env_utils.py  general.py  hyperparam_file_converter.py  model_utils.py  ros_param_distributor.py  staged_train_callback.py  states.py  switch_utils.py  train_agent_utils.py
utils/amcl_utils/: CMakeLists.txt  package.xml
utils/arena_rclpy_mixins/: package.xml  setup.py
utils/map_generator/: CMakeLists.txt  README.md  package.xml
utils/path_search/: CMakeLists.txt  package.xml
utils/task_generator_gui/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
(+766 files in other folders)
