[tool.poetry]
name = "arena-rosnav"
version = "0.1.0"
description = ""
authors = ["ReykCS <reyk-carstens@web.de>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = "^1.11.0"
rospkg = "^1.4.0"
PyYAML = "^6.0"
filelock = "^3.7.1"
scipy = "^1.8.1"
empy = "^3.3.4"
defusedxml = "^0.7.1"
lxml = "^4.9.1"
wandb = "^0.13.9"
seaborn = "^0.12.2"
netifaces = "^0.11.0"
tensorboard = "^2.12.2"
stable-baselines3 = {path = "../utils-extern/misc/stable-baselines3", develop = true}
torchdiffeq = "^0.2.3"
diffcp = "^1.0.21"
cvxpy = "^1.3.0"
cvxpylayers = "^0.1.5"
mpi4py = "^3.1.4"
gputil = "^1.4.0"
tensorboardx = "^2.6"
gym = "^0.22"
opencv-python = "^4.8"
sb3-contrib = "^2.1.0"
shimmy = "^1.3.0"

# pedsim-waypoint-plugin deps
pysocialforce = "^1.1.2"
socialforce = "^0.2.3"
watchdog = "^3.0.0"
pyinstrument = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools==62.2.0", "wheel==0.38.4"]
build-backend = "setuptools.build_meta"
