[tool.poetry]
name = "arena-rosnav"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    "ReykCS <reyk-carstens@web.de>",
    "Volodymyr Shcherbyna <dev@vshch.com>",
]

[tool.poetry.dependencies]
python = "^3.12"
rospkg = "^1.4.0"
PyYAML = "^6.0"
filelock = "^3.7.1"
scipy = "^1.8.1"
empy = "^3.3.4"
defusedxml = "^0.7.1"
lxml = "^4.9.1"
netifaces = "^0.11.0"
watchdog = "^3.0.0"
rosros = "^0.2.5"
transforms3d = "^0.4.2"
opencv-python = "^4.2.0"

[tool.poetry.group.planners]
# all planners except rosnav and aio
optional = true
[tool.poetry.group.planners.dependencies]
torch = "^1.11.0"       # applr, crowdnav, lflh, rlca, sarl, trail
seaborn = "^0.12.2"     # lflh
tensorboard = "^2.12.2" # lflh
torchdiffeq = "^0.2.3"  # lflh
cvxpy = "^1.3.0"        # lflh
cvxpylayers = "^0.1.5"  #lflh
mpi4py = "^3.1.4"       # cadrl, rlca
tensorboardx = "^2.6"   # applr
gym = "^0.22"           # applr, crowdnav, sarl, trail
opencv-python = "^4.8"  # applr

# rosnav incl training toolchain
[tool.poetry.group.training]
optional = true
[tool.poetry.group.training.dependencies]
torch = "^1.11.0"
wandb = "^0.13.9"
tensorboard = "^2.12.2"
torchdiffeq = "^0.2.3"
diffcp = "^1.0.21"
cvxpy = "^1.3.0"
cvxpylayers = "^0.1.5"
mpi4py = "^3.1.4"
gputil = "^1.4.0"
tensorboardx = "^2.6"
gym = "^0.22"
opencv-python = "^4.8"
sb3-contrib = "^2.1.0"
shimmy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
lark = "^1.1.9"

[tool.poetry.group.ros.dependencies]
# ros dependencies
colcon-common-extensions = "^0.3.0"
flake8-blind-except = "^0.2.1"
flake8-class-newline = "^1.6.0"
flake8-deprecated = "^2.2.1"
mypy = "^1.11.0"
pip = "^24.1.2"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-repeat = "^0.9.3"
pytest-rerunfailures = "^14.0"
pytest-runner = "^6.0.1"
pytest-timeout = "^2.3.1"

[build-system]
requires = []
build-backend = "setuptools.build_meta"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
