[tool.poetry]
name = "arena-rosnav"
version = "0.1.0"
description = ""
authors = ["ReykCS <reyk-carstens@web.de>", "Volodymyr Shcherbyna <edu@vshch.com>", "Tuan Anh, Le <anh.maxiking@hotmail.de>"]

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    "docs",
    "_notebooks"
]

[tool.ruff.format]
preview = true

[tool.poetry.dependencies]
python = "^3.8"
rospkg = "^1.4.0"
PyYAML = "^6.0"
filelock = "^3.7.1"
scipy = "^1.8.1"
empy = "^3.3.4"
defusedxml = "^0.7.1"
lxml = "^4.9.1"
netifaces = "^0.11.0"
watchdog = "^3.0.0"

# all planners except rosnav and aio
regex = "^2024.5.15"
shapely = "^2.0.4"
pydantic = "^2.7.2"
gymnasium = "^1.0.0"
[tool.poetry.group.planner.dependencies]
torch = "^1.11.0" # applr, crowdnav, lflh, rlca, sarl, trail
seaborn = "^0.12.2" # lflh
tensorboard = "^2.12.2" # lflh
torchdiffeq = "^0.2.3" # lflh
cvxpy = "^1.4.2, <=1.4.4" # lflh
cvxpylayers = "^0.1.5" #lflh
mpi4py = "^3.1.4" # cadrl, rlca
tensorboardx = "^2.6" # applr
gym = "^0.22" # applr, crowdnav, sarl, trail
opencv-python = "^4.8" # applr

# rosnav incl training toolchain
[tool.poetry.group.training]
optional = true
[tool.poetry.group.training.dependencies]
rosnav_rl = {path = "../../planners/rosnav", develop = true}

# crowdsim deps
[tool.poetry.group.social.dependencies]
pysocialforce = "^1.1.2"
socialforce = "^0.2.3"
pyinstrument = "^4.6.1"
sismic = "^1.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools==62.2.0", "wheel==0.38.4"]
build-backend = "setuptools.build_meta"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

