<?xml version="1.0"?>
<package format="2">
  <name>arena_bringup</name>
  <version>0.0.0</version>
  <description>The arena_bringup package</description>

  <maintainer email="dev@voshch.dev">voshch</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav2_map_server</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
