<?xml version="1.0"?>
<package format="3">
  <name>hunav_gz_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo Garden plugin for moving HuNav actors</description>

  <maintainer email="ahmed.martban@campus.tu-berlin.de">Ahmed Martban</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>ros_gz</depend>
  <depend>hunav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gz-sim8</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
