<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>task_generator</name>
  <version>0.0.0</version>
  <description>The task_generator package</description>
  <maintainer email="reyk@todo.todo">reyk</maintainer>
  <license>TODO</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transforms3d</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>transforms3d</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transforms3d</exec_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>ros_gz_sim</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_python</build_type>
  </export>
</package>
