<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>task_generator</name>
  <version>0.0.0</version>
  <description>The task_generator package</description>
  <maintainer email="reyk@todo.todo">reyk</maintainer>
  <license>TODO</license>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>ros_gz_sim</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>transforms3d</depend>

  <exec_depend>arena_bringup</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_python</build_type>
  </export>
</package>
