<?xml version="1.0"?>
<package format="2">
  <name>arena_rclpy_mixins</name>
  <version>0.0.0</version>
  <description>rclpy mixins used by Arena</description>

  <maintainer email="dev@voshch.dev">voshch</maintainer>


  <license>MIT</license>


  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
