<?xml version="1.0"?>
<package format="3">
  <name>grid_map_generator</name>
  <version>0.0.0</version>
  <description>The grid_map_generator package</description>
  
  <maintainer email="trannamtruong98@gmail.com">Nam Truong Tran</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

