<?xml version="1.0"?>
<package format="3">
  <name>task_generator_msgs</name>
  <version>0.0.0</version>
  <description>rosidl interfaces for task_generator.</description>
  <maintainer email="dev@voshch.dev">voshch</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>